...
fun DetalheVisitTercPagePreview() {
    PCPTheme {
        Scaffold(modifier = Modifier.fillMaxSize()) { innerPadding ->
            DetalheVisitTercContent(
                dthr = "29/08/2024 16:14",
                tipoMov = "ENTRADA",
                veiculo = "100",
                placa = "ABC-1234",
                tipoVisitTerc = "VISITANTE",
                motorista = "123.456.789-00 - ANDERSON DA SILVA DELGADO",
                passageiro = "123.456.789-00 - JOSE DONIZETE;",
                destino = null,
                observ = "TESTE OBSERVAÇÃO",
...
